--- a/Presentaion/appsettings.json
+++ b/Presentaion/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "def": "Data Source=.;Initial Catalog=Inventory;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+  }
 }
